--- a/work/package.json
+++ b/work/package.json
@@ -2,21 +2,40 @@
   "name": "thisDotNgUpgrade",
   "version": "0.0.0",
   "dependencies": {
+    "@angular/common": "^9.0.4",
+    "@angular/compiler": "^9.0.4",
+    "@angular/core": "^9.0.4",
+    "@angular/platform-browser": "^9.0.4",
+    "@angular/platform-browser-dynamic": "^9.0.4",
+    "@angular/router": "^9.0.4",
     "angular": "^1.7.9",
     "angular-mocks": "^1.7.9",
     "angular-route": "^1.7.9",
     "angular-toastr": "^2.1.1",
     "animate.css": "^3.7.2",
     "bootstrap-sass": "^3.4.1",
-    "jquery": "^2.2.4"
+    "jquery": "^2.2.4",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.1",
+    "zone.js": "^0.10.2"
   },
   "scripts": {
     "serve": "gulp serve",
+    "serve:ng": "ng serve",
     "serve:dist": "gulp serve:dist",
     "build": "gulp build",
-    "test": "gulp test"
+    "build:ng": "ng build",
+    "test": "gulp test",
+    "test:ng": "ng test"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.900.4",
+    "@angular/cli": "~9.0.4",
+    "@angular/compiler-cli": "~9.0.3",
+    "@angular/language-service": "~9.0.3",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "browser-sync": "~2.9.11",
     "browser-sync-spa": "~1.0.3",
     "chalk": "~1.1.1",
@@ -40,22 +59,30 @@
     "gulp-replace": "~0.5.4",
     "gulp-rev": "~6.0.1",
     "gulp-rev-replace": "~0.4.2",
-    "gulp-sass": "~2.0.4",
+    "gulp-sass": "~4.0.2",
     "gulp-size": "~2.0.0",
     "gulp-sourcemaps": "~1.6.0",
     "gulp-uglify": "~1.4.1",
     "gulp-useref": "~3.0.3",
     "gulp-util": "~3.0.6",
     "http-proxy-middleware": "~0.9.0",
-    "karma": "~0.13.10",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.3.0",
     "karma-angular-filesort": "~1.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~0.5.2",
-    "karma-jasmine": "~0.3.6",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "karma-ng-html2js-preprocessor": "~0.2.0",
     "karma-phantomjs-launcher": "~0.2.1",
     "karma-phantomjs-shim": "~1.2.0",
     "lodash": "~3.10.1",
     "phantomjs": "~1.9.18",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5",
     "uglify-save-license": "~0.4.1"
   },
   "engines": {
