--- a/work/.eslintrc
+++ b/work/.eslintrc
@@ -3,7 +3,8 @@
   "plugins": [],
   "env": {
     "browser": true,
-    "jasmine": true
+    "jasmine": true,
+    "node": true
   },
   "globals": {
     "angular": true,
