--- a/work/package.json
+++ b/work/package.json
@@ -21,13 +21,9 @@
     "zone.js": "^0.10.2"
   },
   "scripts": {
-    "serve": "gulp serve",
-    "serve:ng": "ng serve --extra-webpack-config webpack.partial.js --proxy-config proxy.conf.json",
-    "serve:dist": "gulp serve:dist",
-    "build": "gulp build",
-    "build:ng": "ng build --extra-webpack-config webpack.partial.js",
-    "test": "gulp test",
-    "test:ng": "ng test --extra-webpack-config webpack.partial.js"
+    "serve": "ng serve --extra-webpack-config webpack.partial.js --proxy-config proxy.conf.json",
+    "build": "ng build --extra-webpack-config webpack.partial.js",
+    "test": "ng test --extra-webpack-config webpack.partial.js"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.4",
@@ -37,53 +33,22 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "browser-sync": "~2.9.11",
-    "browser-sync-spa": "~1.0.3",
     "chalk": "~1.1.1",
     "del": "~2.0.2",
     "eslint-plugin-angular": "~0.12.0",
     "estraverse": "~4.1.0",
-    "gulp": "~3.9.0",
-    "gulp-angular-filesort": "~1.1.1",
-    "gulp-angular-templatecache": "~1.8.0",
-    "gulp-autoprefixer": "~3.0.2",
-    "gulp-cssnano": "~2.1.1",
-    "gulp-eslint": "~1.0.0",
-    "gulp-filter": "~3.0.1",
-    "gulp-flatten": "~0.2.0",
-    "gulp-htmlmin": "~1.3.0",
-    "gulp-inject": "~3.0.0",
-    "gulp-load-plugins": "~0.10.0",
-    "gulp-ng-annotate": "~1.1.0",
-    "gulp-protractor": "~2.1.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-replace": "~0.5.4",
-    "gulp-rev": "~6.0.1",
-    "gulp-rev-replace": "~0.4.2",
-    "gulp-sass": "~4.0.2",
-    "gulp-size": "~2.0.0",
-    "gulp-sourcemaps": "~1.6.0",
-    "gulp-uglify": "~1.4.1",
-    "gulp-useref": "~3.0.3",
-    "gulp-util": "~3.0.6",
     "html-loader": "^0.5.5",
-    "http-proxy-middleware": "~0.9.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
-    "karma-angular-filesort": "~1.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~0.5.2",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "karma-ng-html2js-preprocessor": "~0.2.0",
-    "karma-phantomjs-launcher": "~0.2.1",
-    "karma-phantomjs-shim": "~1.2.0",
     "lodash": "~3.10.1",
     "ng-annotate-loader": "^0.6.1",
     "ngx-build-plus": "^9.0.6",
-    "phantomjs": "~1.9.18",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5",
