--- a/work/package.json
+++ b/work/package.json
@@ -2,6 +2,7 @@
   "name": "thisDotNgUpgrade",
   "version": "0.0.0",
   "dependencies": {
+    "@angular/animations": "^9.0.6",
     "@angular/common": "^9.0.4",
     "@angular/compiler": "^9.0.4",
     "@angular/core": "^9.0.4",
@@ -16,6 +17,7 @@
     "animate.css": "^3.7.2",
     "bootstrap-sass": "^3.4.1",
     "jquery": "^2.2.4",
+    "ngx-toastr": "^12.0.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.2"
